# timbre-based-pretraining

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  extract.yaml  inference.yaml  vae.yaml
config/dataset/: nsynth.yaml  path.yaml  vae_nsynth.yaml
config/feature/: ddsp_harmonic.yaml
config/logging/: default.yaml
config/model/: default.yaml
config/optimization/: default.yaml
config/runtime/: gpu_parallel.yaml
config/training/: default.yaml
environments/: Dockerfile
environments/gpu/: .env  docker-compose.yaml
scripts/extract/: extract.sh
scripts/inference/: run.sh
scripts/setup/: docker.sh
scripts/vae/: train.sh
src/extract/: dataset.py  features.py  main.py  preprocess.py  save.py  workers.py
src/inference/: clustering.py  io.py  midi.py  run.py  synthesis.py  tau.py
src/utils/: beta_scheduler.py  clustering_metrics.py  logging.py  logging_utils.py  normalization.py  reproducibility.py  tradeoff_analysis.py  training_metrics.py  utils.py
src/vae/: dataset.py  hooks.py  io.py  losses.py  model.py  train.py  trainer.py  vae.py
